--- a/TransactionTracker/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/TransactionTracker/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -3,13 +3,14 @@
     android:height="108dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#285E1C">
+    android:tint="#8596ff">
   <group android:scaleX="0.58"
       android:scaleY="0.58"
       android:translateX="5.04"
       android:translateY="5.04">
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M9,21c0,0.5 0.4,1 1,1h4c0.6,0 1,-0.5 1,-1v-1L9,20v1zM12,2C8.1,2 5,5.1 5,9c0,2.4 1.2,4.5 3,5.7L8,17c0,0.5 0.4,1 1,1h6c0.6,0 1,-0.5 1,-1v-2.3c1.8,-1.3 3,-3.4 3,-5.7 0,-3.9 -3.1,-7 -7,-7z"/>
+        android:pathData="M11 15H17V17H11V15M9 7H7V9H9V7M11 13H17V11H11V13M11 9H17V7H11V9M9 11H7V13H9V11M21 5V19C21 20.1 20.1 21 19 21H5C3.9 21 3 20.1 3 19V5C3 3.9 3.9 3 5 3H19C20.1 3 21 3.9 21 5M19 5H5V19H19V5M9 15H7V17H9V15Z"/>
   </group>
 </vector>
+
